@@ -3,9 +3,9 @@
 libgstreamer-plugins-base@GST_ABI@-dev (>= 0.11.91)
 autotools-dev
 dh-autoreconf
-automake (>= 1.10)
-autoconf (>= 2.60)
-libtool (>= 2.0)
+automake (>= 1.11)
+autoconf (>= 2.62)
+libtool (>= 2.2.6)
 autopoint (>= 0.17)
 cdbs (>= 0.4.93)
 debhelper (>= 8.1.3)
