@@ -7,6 +7,8 @@ gst-plugins-good1.0 (0.11.91-1) experimental; urgency=low
       - Build depend on GStreamer core/base >= 0.11.91.
     + debian/gstreamer-plugins-good.install:
       - Ship some plugins again that were now ported.
+  * debian/build-deps.in:
+    + Update automake, autoconf and libtool build dependencies.
 
  -- Sebastian Dröge <slomo@debian.org>  Mon, 21 May 2012 12:56:30 +0200
 
